# tch-notitication-rest

./: .gitignore  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml
config/: bd.py
docker/init/: 001_schema.sql  002_seeds.sql
models/: notifications.py  user.py
routes/: dependencies.py  notifications.py  user.py
schemas/: notifications.py  user.py
services/: channels_service.py  notification_service.py  user_services.py
tests/: conftest.py  test_user_creation.py  test_user_login.py
