[project]
name = "notification-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "pymysql>=1.1.3",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
    "werkzeug>=3.1.8",
]

[dependency-groups]
dev = [
    "pytest-env>=1.6.0",
]
[tool.pytest.ini_options]
env = [
    "APP_ENV=.env.test"
]